<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fermon Group App</string>
    <string name="title_home">Fermon Group</string>
    <string name="title_menu_home">Home</string>
    <string name="title_logs">Com Logs</string>
    <string name="title_about">About</string>
    <string name="title_control">Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing">Testing</string>
    <string name="delete_log">Delete Logs</string>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="home_title">Welcome</string>
    <string name="bluetooth_status_on">Bluetooth Status ON :</string>
    <string name="bluetooth_status_off">Bluetooth Status OFF:</string>
    <string name="search">Search</string>
    <string name="connect">Connect</string>

    <!--Joystick Strings-->
    <string name="JoyStick_Position">Position</string>
    <string name="JoyStick_Angle">Angle</string>
    <string name="JoyStick_Power">Power</string>
    <string name="JoyStick_Center">Center</string>
    <string name="JoyStick_Front">Front</string>
    <string name="JoyStick_Front_Left">Front - Left</string>
    <string name="JoyStick_Left">Left</string>
    <string name="JoyStick_Left_Bottom">Left - Bottom</string>
    <string name="JoyStick_Bottom">Bottom</string>
    <string name="JoyStick_Bottom_Right">Bottom - Right</string>
    <string name="JoyStick_Right">Right</string>
    <string name="JoyStick_Front_Right">Front - Right</string>

    <!--Testing Strings-->
    <string name="Testing_edit">Edit commands by accessing Settings.</string>
    <string name="Testing_Command">Command</string>
    <string name="Testing_Button1">Send Cmd 1</string>
    <string name="Testing_Button2">Send Cmd 2</string>
    <string name="Testing_Button3">Send Cmd 3</string>
    <string name="Testing_Button4">Send Cmd 4</string>
    <string name="Testing_Button5">Send Cmd 5</string>
    <string name="Testing_Button6">Send Cmd 6</string>
    <string name="Testing_Button7">Send Cmd 7</string>
    <string name="Testing_Button8">Send Cmd 8</string>
    <string name="Testing_Button9">Send Cmd 9</string>
    <string name="Testing_Button10">Send Cmd 10</string>
    <string name="Testing_Button11">Send Cmd 11</string>
    <string name="Testing_Button12">Send Cmd 12</string>
    <string name="Testing_Button13">Send Cmd 13</string>
    <string name="Testing_Button14">Send Cmd 14</string>
    <string name="Testing_Button15">Send Cmd 15</string>

</resources>
