<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" tools:context="com.fermongroup.app.Testing">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Testing_edit"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView1"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button1"
                android:id="@+id/testing_btn1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button2"
                android:id="@+id/testing_btn2"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView3"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button3"
                android:id="@+id/testing_btn3"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView4"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button4"
                android:id="@+id/testing_btn4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView5"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button5"
                android:id="@+id/testing_btn5"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView6"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button6"
                android:id="@+id/testing_btn6"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView7"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button7"
                android:id="@+id/testing_btn7"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView8"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button8"
                android:id="@+id/testing_btn8"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView9"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button9"
                android:id="@+id/testing_btn9"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView10"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button10"
                android:id="@+id/testing_btn10"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView11"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button11"
                android:id="@+id/testing_btn11"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView12"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button12"
                android:id="@+id/testing_btn12"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView13"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button13"
                android:id="@+id/testing_btn13"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView14"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button14"
                android:id="@+id/testing_btn14"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Command"
                android:id="@+id/textView15"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Testing_Button15"
                android:id="@+id/testing_btn15"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
